Fix page-title and nav alignment

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -98,6 +98,7 @@ header {
 .page-title {
   color: var(--color-yellow);
   font-family: 'Courier New', Courier, monospace;
+  margin-bottom: 0;
 }
 
 .page-title:hover {
